--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
     resize: none;
     font-family: arial;
+    border-radius: 5px;
 }
 
 .days-of-week-container {
@@ -258,14 +259,27 @@ input[type=number]::-webkit-outer-spin-button {
     height: 30px;
 }
 
-#allowed-urls-button {
-    margin-bottom: 0;
-}
-
 #settings-page {
     padding-bottom: 0;
 }
 
 #block-website-button {
     margin-bottom: 0;
+}
+
+#blockpage-message-modal {
+    height: 250px;
+}
+
+#blockpage-message-input {
+    height: 100px;
+}
+
+#blockpage-emoji-input {
+    height: 25px;
+    width: 120px;
+    margin-left: 50px;
+    margin-top: 10px;
+    border-radius: 5px;
+    text-align: center;
 }
